Add extra logo in header, make HTML semantic and complete structure of index.html

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,9 @@
       "**/CVS": true
    },
    "files.autoSave": "off",
-   "workbench.colorTheme": "Visual Studio Dark",
-   "editor.defaultFormatter": "HookyQR.beautify"
+   "workbench.colorTheme": "Abyss",
+   "editor.defaultFormatter": "HookyQR.beautify",
+   "workbench.preferredDarkColorTheme": "Abyss",
+   "workbench.preferredHighContrastColorTheme": "Abyss",
+   "workbench.preferredLightColorTheme": "Abyss"
 }
