Total the value of the cards in haan and add check for blackjack within checkHandValue function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,7 @@
       "**/CVS": true
    },
    "files.autoSave": "off",
-   "workbench.colorTheme": "Abyss",
+   "workbench.colorTheme": "Visual Studio Light",
    "editor.defaultFormatter": "HookyQR.beautify",
    "workbench.preferredDarkColorTheme": "Abyss",
    "workbench.preferredHighContrastColorTheme": "Abyss",
