move query selectors out of the DOM loaded event and make the DOM loaded evernt include all code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,8 @@
    "editor.defaultFormatter": "HookyQR.beautify",
    "workbench.preferredDarkColorTheme": "Abyss",
    "workbench.preferredHighContrastColorTheme": "Abyss",
-   "workbench.preferredLightColorTheme": "Abyss"
+   "workbench.preferredLightColorTheme": "Abyss",
+   "[javascript]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+   }
 }
