change default tabs to 4 in vscode extension called  prettier and format documents script.js and style.css using this extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,8 @@
    "workbench.preferredLightColorTheme": "Abyss",
    "[javascript]": {
       "editor.defaultFormatter": "esbenp.prettier-vscode"
+   },
+   "[css]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
    }
 }
