streamline computer turn, and compareHands functions. add functions for draw result and house bust results

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,8 @@
    },
    "[css]": {
       "editor.defaultFormatter": "esbenp.prettier-vscode"
-   }
+   },
+   "cSpell.words": [
+      "redeal"
+   ]
 }
