add font-size to buttons and adjust padding to suit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
       "editor.defaultFormatter": "esbenp.prettier-vscode"
    },
    "cSpell.words": [
+      "darkred",
       "opyright",
       "redeal",
       "thems"
